# maballesteros.github.io

./: .gitignore  AGENTS.md  CNAME  Gemfile  README.md  _config.yml  ai-product-engineering.md  apps.md  article-1.md  feed.xml  index.md  sitemap.xml
_data/: navigation.yml
_includes/: _author-bio.html  _head.html  _open-graph.html
_layouts/: article-index.html  blog-index-en.html  blog-index.html  experiment-index.html  home.html  page.html  post-index.html  post.html  project-index.html
_sass/: apps.scss  page.scss
_site/: 404.html  feed.xml  index.html  sitemap.xml
about/: index.html  index.md
apps/kungfu-graph/src-tauri/: Cargo.toml  tauri.conf.json
apps/kungfu-graph/src-tauri/src/: main.rs
articles/: index.html  index.md
assets/css/: main.css  (+1 more)
biblioteca/: index.html
blog/: index.md
dreamloop/: README.md  SPECS.md  index.html  metadata.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
ebooks/: AGENTS.md  ebooks.json
en/: ai-product-engineering.md
experiments/: index.md
myjournalgenerator/: App.tsx  JournalLibraryView.tsx  README.md  constants.ts  index.html  metadata.json  package-lock.json  package.json  types.ts
posts/: index.md
professional/: index.md
projects/: index.md
runlog-pro/: README.md  index.html
sample/: 2012-05-22-readability-post.md  2013-05-22-sample-post-images.md  2013-05-23-readability-feature-post.md.old  2013-08-12-sample-link-post.md.old  2014-07-31-author-override.md.old  2015-15-11-EXAMPLE_MARKDOWN.md
selected-work/: index.md
sport-planner/: index.html  manifest.webmanifest  sw.js
(+1454 files in other folders)
