[package]
name = "kungfu-graph"
version = "0.1.0"
description = "Local-first KungFu graph editor"
authors = ["Mike Ballesteros"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "=2.4.1", features = [] }

[dependencies]
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
tauri = { version = "=2.8.5", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
